--- a/index.html
+++ b/index.html
@@ -6,12 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    <p>hi</p>
-    <div>hi</div>
-    <div>This is Dev</div>
-    <div class="container">
-        <img src="" alt="">
+    
+    <h1>Welcome to My Page</h1>
+    <p>This is a simple HTML document.</p>              
+    <p>Here is a paragraph with some text.</p>
+    <p>Another paragraph with more information.</p> 
+
+
         <p>hi this pull request from charan</p>
+        div class="content">
+
+
+
+            <p>Content goes here</p>
+            <img src="" alt="">
+
+
     </div>
 </body>
 </html>
